openshift/reference/keycloak-db/keycloak-db-service.yaml
{
  "apiVersion": "v1",
  "kind": "Service",
  "metadata": {
    "name": "keycloak-db",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "keycloak-db"
    }
  },
  "spec": {
    "selector": {
      "app": "keycloak-db"
    },
    "ports": [
      {
        "name": "postgres",
        "port": 5432,
        "targetPort": 5432
      }
    ]
  }
}
