openshift/reference/keycloak-db/allow-keycloak.yaml
{
  "apiVersion": "networking.k8s.io/v1",
  "kind": "NetworkPolicy",
  "metadata": {
    "name": "db-from-keycloak",
    "namespace": "dda-sso",
    "labels": {
      "app.kubernetes.io/part-of": "dda-sso",
      "app.kubernetes.io/name": "keycloak-db"
    }
  },
  "spec": {
    "podSelector": {
      "matchLabels": {
        "app": "keycloak-db"
      }
    },
    "policyTypes": [
      "Ingress"
    ],
    "ingress": [
      {
        "from": [
          {
            "podSelector": {
              "matchLabels": {
                "app": "keycloak"
              }
            }
          }
        ],
        "ports": [
          {
            "port": 5432,
            "protocol": "TCP"
          }
        ]
      }
    ]
  }
}
